[tool.poetry]
name = "gpio-api"
version = "0.0.0"
description = ""
authors = ["Colin Nolan <cn580@alumni.york.ac.uk>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.13"
gpiozero = "^2.0.1"
fastapi = {extras = ["standard"], version = "^0.115.4"}
# lgpio = { version = "^2.2.1", optional = true }

[tool.poetry.extras]
aws-lambda = ["rpi5"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
