[tool.poetry]
name = "gpio-api"
version = "0.0.0"
description = ""
authors = ["Colin Nolan <cn580@alumni.york.ac.uk>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"
fastapi = {extras = ["standard"], version = "^0.115.4"}
lgpio = { version = "^0.2.2.0", optional = true }
pydantic-settings = "^2.6.1"

[tool.poetry.extras]
rpi5 = ["lgpio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
